Program now fetches project data. Fixed the layout to display correctly when container 1 stretches past the bottom.

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
 main {
   margin: 0 auto;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
+  align-items: stretch;
   /* flex-direction: column; */
 }
 
@@ -24,7 +25,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 10;
+  margin-right: var(--default-padding);
   padding: 10px;
 }
 
@@ -32,10 +33,15 @@ main {
   background-color: transparent;
 }
 
+.left-area, .right-area {
+  min-height: 100vh;
+}
+
 .right-area {
   width: var(--container1-width);
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .logo-area.primary {
@@ -165,13 +171,21 @@ nav.secondary .header-link p:hover, nav.secondary .header-link a:hover{
 
 .container1 {
   width: 100%;
+  height: 100%;
   margin: 0;
   justify-self: flex-end;
   align-self: flex-start;
   display: flex;
   flex-direction: column;
-  flex-grow: 6;
+  /* flex-grow: 6; */
 
+}
+
+.left-area {
+  width: var(--container2-width);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container2 {
@@ -184,7 +198,7 @@ nav.secondary .header-link p:hover, nav.secondary .header-link a:hover{
 }
 
 .container2.primary {
-  width: var(--container2-width);
+  width: 100%;
   height: 100%;
 }
 
@@ -202,7 +216,7 @@ nav.secondary .header-link p:hover, nav.secondary .header-link a:hover{
   flex-direction: column;
   align-items: flex-start;
   justify-self: flex-end;
-  flex-grow: 1;
+  /* flex-grow: 1; */
   /* margin-bottom: var(--right-area-margin); */
 }
 
@@ -230,6 +244,10 @@ nav.secondary .header-link p:hover, nav.secondary .header-link a:hover{
   }
 
   nav.primary {
+    display: none;
+  }
+
+  .left-area {
     display: none;
   }
 
